[package]
name = "krust"
version = "0.1.0"
authors = ["Alex Whitney <awhitney@tylercapital.co.uk>"]
links = "kdb"
build = "build.rs"
edition = "2018"

[dependencies]
libc = "*"
num = "*"
bitflags = "*"
nix = "*"
lazy_static = "^1.1.0"
k_derive = { path = "./k_derive" }

[lib]
name = "krust"
#crate-type = ["dylib", "bin"]

[features]
api = []
